@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.8-3
-Date: 2004/04/09
+Version: 0.8-4
+Date: 2004/04/19
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
